# WhisperGUGUGAGA

./: .env.example  .gitignore  README.md  install_and_run.bat  main.py  pyproject.toml  requirements.txt
dist_template/: run.bat
src/vision_assistant/: __init__.py  application.py
src/vision_assistant/agent/: __init__.py  conversation_memory.py  doubao_vision_agent.py
src/vision_assistant/background/: __init__.py  qt_threadpool_runner.py
src/vision_assistant/bubble/: bubble_position_calculator.py
src/vision_assistant/config/: __init__.py  yaml_config.py
src/vision_assistant/gui/: __init__.py  characterPlan.py  message_input_window.py  mosaic_character_window.py  speech_bubble_window.py
src/vision_assistant/monitor/: __init__.py  mss_screen_monitor.py
src/vision_assistant/types/: __init__.py  models.py
tests/: __init__.py  test_conversation_memory.py  test_mss_screen_monitor.py
type/: build_portable_zip.ps1  build_pyinstaller_dir.ps1  build_pyinstaller_onefile.ps1
