[project]
name = "vision-desktop-assistant"
version = "0.1.0"
description = "A vision-based desktop monitoring assistant with LLM analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyQt6>=6.8.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "mss>=9.0.0",
    "Pillow>=11.0.0",
    "pyyaml>=6.0.2",
    "watchdog>=6.0.0",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
]
